--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.6.8:
+
+* Change the GApplication application ID again.
+  This time to base it on the website's domain.
+
 0.6.7:
 
 * Change the GApplication application ID.
